# module-2_homework-13

./: .gitignore  any.py  pyproject.toml
django/hw10/authors/: models.py  views.py
django/hw10/authors/migrations/: 0002_alter_author_fullname.py
django/hw10/authors/static/authors/: style.css
django/hw10/authors/templates/authors/: author.html
django/hw10/hw10/: settings.py  urls.py
django/hw10/quotes/: models.py  urls.py  views.py
django/hw10/quotes/migrations/: 0001_initial.py
django/hw10/quotes/static/quotes/: style.css
django/hw10/quotes/templates/quotes/: add_quote.html  base.html
django/hw10/users/: forms.py  urls.py  views.py
django/hw10/users/templates/users/: signin.html  signup.html
django/hw10/utils/: add_data_to_postgres_from_mongo.py  mongo_config.ini  mongo_connect.py  postgres_config.ini
fa/: main.py
fa/src/database/: models.py  redis_db.py
fa/src/repository/: contacts.py  users.py
fa/src/routes/: auth.py  contacts.py  users.py
fa/src/services/: auth.py  email.py
hw10/authors/: forms.py  urls.py
hw10/authors/migrations/: 0001_initial.py
hw10/authors/templates/authors/: add_author.html
hw10/hw10/: settings.py
hw10/quotes/: forms.py
hw10/quotes/templates/quotes/: index.html
hw10/users/: urls.py  views.py
hw10/users/templates/users/: signin.html  signup.html
hw10/utils/: postgres_connect.py
